# FFmepgDemo

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/willkernel/www/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg-lib.c
app/src/main/cpp/include/yuv/libyuv/: row.h
app/src/main/java/com/willkernel/www/ffmpeg/: CApp.java  MainActivity.java  VideoPlayer.java  VideoUtils.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/willkernel/www/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
